--- a/client-store/Css/login.css
+++ b/client-store/Css/login.css
@@ -6,11 +6,10 @@ body {
     align-items: center;
     min-height: 1000px;
     width: 100%;
-    background: url(Image/Thiết\ kế\ chưa\ có\ tên.png)no-repeat;
+    background: url(../assets/Thiết\ kế\ chưa\ có\ tên.png)no-repeat;
     background-size: cover;
     font-family: Roboto, Arial;
 }
-
 
 .icon {
     width: 6%;
@@ -23,7 +22,6 @@ body {
     align-items: center;
     width: 450px;
     height: 550px;
-    /* background: rgba(63, 109, 117, 0.7); */
     background-color: rgba(22, 128, 199, 0.8);
     border: 2px solid rgb(255, 255, 255);
     border-radius: 12px;
@@ -98,7 +96,7 @@ input:valid ~ label{
 .remember label a:hover{
     text-decoration: underline;
 }
-button{
+.register-button{
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -108,12 +106,13 @@ button{
     cursor: pointer;
     font-size: 20px;
     font-weight: 600;
+    padding: 10px;
 }
 
-button:hover{
+.register-button:hover{
     background-color: rgb(23, 166, 248);
     color: white;
-}
+} 
 .login-button{
     width: 100%;
     height: 40px;
@@ -136,7 +135,8 @@ button:hover{
     font-size: 20px;
     color: white;
     text-align: center;
-    margin: 25px 0 10px;
+    margin-top: 10px;
+
    
 }
 .register p a{
@@ -150,4 +150,33 @@ button:hover{
     text-decoration: underline;
 }
 
+.register{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: center;
+
+}
+.login2-button{
+    width: 40%;
+    height: 40px;
+    border-radius: 40px;
+    background: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.login2-button:hover{
+    /* opacity: 0.7;
+     */
+     background-color: rgb(23, 166, 248);
+     color: white;
+}
+
+.now{
+    margin-top: -10px;
+}
 
