--- a/client-store/Css/header.css
+++ b/client-store/Css/header.css
@@ -1,30 +1,33 @@
 * {
+    font-family: 'Roboto', sans-ser;
     margin: 0 0;
 }
 
 header {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
     box-shadow: 0 0 5px;
-    background-color: white;
+    background-color:  #1B1A21;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 9999;
 
 }
 
-.logo_DVT img{
+.logo_DVT img {
     height: 100px;
-    width: 350px;
+    object-fit: cover;
 }
+
 
 .header_nav {
     padding-left: 0;
 }
 
-.header_nav ul{
+.header_nav ul {
     display: flex;
     list-style-type: none;
     padding-left: 0;
@@ -33,21 +36,22 @@ header {
 
 
 .header_nav ul li a {
-    color: rgb(22, 128, 199);
+    color: #E3E1E3;
     text-decoration: none;
     font-size: larger;
     padding: 10px 15px;
     border-radius: 20px;
-    transition: background-color 0.5s ease;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 500;
+    transition: background-color 0.3s ease;
+    font-family: 'Roboto', sans-ser;
+    font-weight: medium;
+    text-transform: uppercase;
 }
 
 
 
 .header_nav ul li a:hover {
-    background-color: rgb(22, 128, 199);
-    color: white;
+    background-color: #DA18A3;
+    color: #E3E1E3 ;
 }
 
 
@@ -60,7 +64,7 @@ header {
 }
 
 .search_box button:hover {
-    background-color: rgb(22, 128, 199);
+    background-color: rgb(232, 95, 118);
 }
 
 .search_box {
@@ -81,14 +85,13 @@ header {
     height: 30px;
     background-size: cover;
     cursor: pointer;
-    background-color: white;
+    background-color: #E3E1E3;
     border-radius: 30px;
 }
 
 .icon_search img {
-    
     width: 20px;
-    height: 20px;
+    height: 20px;  
 }
 
 .search_box input {
@@ -98,16 +101,16 @@ header {
     padding: 0 15px 0 15px;
     border: none;
     outline: none;
-    background-color: rgb(100, 170, 216);
+    background-color: #DA18A3;
 }
 
 #text_input {
-    color: white;
+    color:  #E3E1E3;
 
 }
 
 #text_input::placeholder {
-    color: white;
+    color: #E3E1E3;
 }
 
 .cart_login {
@@ -118,24 +121,167 @@ header {
     height: 55px;
     width: 55px;
     border: none;
-    background-color: white;
+    background-color: #1B1A21;
     cursor: pointer;
+}
+
+.cart_login .cart img,
+.cart_login .user img {
+    -webkit-filter: invert(100%);
 }
 
 .user {
     height: 50px;
     width: 50px;
     border: none;
-    background-color: white;
+    background-color: #1B1A21;
     cursor: pointer;
 }
 
 .banner {
-    padding: 120px 30px 20px 30px;
+    display: flex;
+    padding: 120px 30px 0 30px;
+    background-color: #24252D;
+}
+
+
+.banner_right {
+    width: 100%;
 }
 
 .banner img {
     width: 100%;
-    height: 500px;
+    height: 100%;
     border-radius: 50px;
+}
+
+.body {
+    /* margin-top: -200px; */
+    background-color:#24252D;
+}
+
+.divider {
+    display: flex;
+    align-items: center;
+    padding: 50px 400px 50px 400px;
+}
+
+.divider-line {
+    flex-grow: 1;
+    border-top: 3px solid white;
+}
+
+.divider-text p {
+    color: white;
+    padding: 0 20px;
+    font-size: xx-large;
+    font-weight: bold;
+    font-family: inherit;
+    text-transform: uppercase;
+}
+
+.catelory {
+    background-image: url(../assets/bg-dvt2.jpg) ;
+    background-repeat: no-repeat;
+    background-size: 100% 800px;
+    background-position: 100% 100px;
+    height: 800px;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    padding: 0 150px;
+}
+
+.product {
+    background-color: inherit;
+    text-align: center;
+    background-color: white;
+    flex-direction: column;
+    border-radius: 20px;
+    overflow: hidden;
+    height: fit-content;
+    cursor: pointer;
+}
+
+.product:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.product:hover .name_product span {
+    color: #105F94;
+}
+
+.name_product {
+    padding: 0 20px;
+    margin: 10px 0;
+    text-align: left;
+}
+
+.name_product span {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: large;
+}
+
+.info_product span {
+    height: 55px;
+    text-align: left;
+    padding: 0px 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.product_img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    position: relative;
+    overflow: hidden;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.product_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top: 20px;
+    
+    transition: transform 0.3s ease;
+}
+
+.price_tag {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.65);
+    border-top-left-radius: 20px;
+    color: white;
+    padding: 10px 20px;
+    font-size: 25px;
+}
+
+.product_img img:hover {
+    transform: scale(1.2);
+}
+
+.add_button {
+    color: white;
+    margin-top: 10px;
+    padding: 10px 15px;
+    border-radius: 30px;
+    background-color: #DA18A3;
+    border: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 16px;
+}
+.add_button:hover {
+    opacity: 0.8;
+}
+
+.commit {
+    height: 500px;
 }
