fix header.html and header.css 24/5/2023

--- a/client-store/Css/header.css
+++ b/client-store/Css/header.css
@@ -1,288 +1,323 @@
 * {
-    font-family: 'Roboto', sans-ser;
-    margin: 0 0;
+  font-family: "Roboto", sans-serif;
+  margin: 0 0;
+}
+
+/* For Webkit browsers */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #424242;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7b7b7b;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #7b7b7b #424242;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #424242;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #7b7b7b;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
+
+body {
+  background-color: #2a303c;
+  background-image: url("https://www.transparenttextures.com/patterns/food.png");
+  color: white;
 }
 
 header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0 0 5px;
-    background-color:  #1B1A21;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  transition: 0.2s;
+}
 
+header.scrolled {
+  background: #1b1a21;
+  transition: 0.2s;
 }
 
 .logo_DVT img {
-    height: 100px;
-    object-fit: cover;
+  height: 100px;
+  object-fit: cover;
 }
 
-
 .header_nav {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .header_nav ul {
-    display: flex;
-    list-style-type: none;
-    padding-left: 0;
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
 }
-
-
 
 .header_nav ul li a {
-    color: #E3E1E3;
-    text-decoration: none;
-    font-size: larger;
-    padding: 10px 15px;
-    border-radius: 20px;
-    transition: background-color 0.3s ease;
-    font-family: 'Roboto', sans-ser;
-    font-weight: medium;
-    text-transform: uppercase;
+  text-decoration: none;
+  font-size: larger;
+  padding: 10px 15px;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+  font-weight: semibold;
+  text-transform: uppercase;
+  color: #1b1a21;
 }
 
-
+header.scrolled .header_nav ul li a {
+  color: white;
+}
 
 .header_nav ul li a:hover {
-    background-color: #DA18A3;
-    color: #E3E1E3 ;
+  background-color: #fad56a;
+  color: white;
 }
 
-
 .search_box button {
-    height: 35px;
-    width: 35px;
-    background-color: white;
-    border-radius: 20px;
-    cursor: pointer;
+  height: 35px;
+  width: 35px;
+  background-color: white;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .search_box button:hover {
-    background-color: rgb(232, 95, 118);
+  background-color: rgb(232, 95, 118);
 }
 
 .search_box {
-    display: flex;
-    align-items: center;
-    position: relative;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .icon_search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 50%;
-    right: 5px;
-    transform: translateY(-50%);
-    width: 30px;
-    height: 30px;
-    background-size: cover;
-    cursor: pointer;
-    background-color: #E3E1E3;
-    border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .icon_search img {
-    width: 20px;
-    height: 20px;  
+  width: 20px;
+  height: 20px;
 }
 
 .search_box input {
-    height: 40px;
-    width: 250px;
-    border-radius: 20px;
-    padding: 0 15px 0 15px;
-    border: none;
-    outline: none;
-    background-color: #DA18A3;
+  height: 40px;
+  width: 250px;
+  border-radius: 20px;
+  padding: 0 15px 0 15px;
+  border: none;
+  outline: none;
+  background-color: #fad56a;
+  color: white;
 }
 
-#text_input {
-    color:  #E3E1E3;
-
-}
-
-#text_input::placeholder {
-    color: #E3E1E3;
+.search_box input::placeholder {
+  color: white;
 }
 
 .cart_login {
-    display: flex;
+  display: flex;
 }
 
 .cart {
-    height: 55px;
-    width: 55px;
-    border: none;
-    background-color: #1B1A21;
-    cursor: pointer;
+  height: 55px;
+  width: 55px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.cart_login .cart img,
-.cart_login .user img {
-    -webkit-filter: invert(100%);
+header.scrolled .cart_login .cart img,
+header.scrolled .cart_login .user img {
+  -webkit-filter: invert(100%);
 }
 
 .user {
-    height: 50px;
-    width: 50px;
-    border: none;
-    background-color: #1B1A21;
-    cursor: pointer;
+  height: 50px;
+  width: 50px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .banner {
-    display: flex;
-    padding: 120px 30px 0 30px;
-    background-color: #24252D;
+  width: 100%;
+  max-height: 90vh;
+  object-fit: fill;
+  position: relative;
+  display: block;
 }
 
-
-.banner_right {
-    width: 100%;
+.productList{
+  position: relative;
 }
 
-.banner img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50px;
-}
-
-.body {
-    /* margin-top: -200px; */
-    background-color:#24252D;
+.productList .productList-bg-1
+{
+  width: 100%;
+  position: absolute;
+  z-index: -10;
 }
 
 .divider {
-    display: flex;
-    align-items: center;
-    padding: 50px 400px 50px 400px;
+  display: flex;
+  align-items: center;
+  padding: 50px 400px 50px 400px;
 }
 
 .divider-line {
-    flex-grow: 1;
-    border-top: 3px solid white;
+  flex-grow: 1;
+  border-top: 3px solid white;
 }
 
 .divider-text p {
-    color: white;
-    padding: 0 20px;
-    font-size: xx-large;
-    font-weight: bold;
-    font-family: inherit;
-    text-transform: uppercase;
+  padding: 0 20px;
+  font-size: xx-large;
+  font-weight: bold;
+  text-transform: uppercase;
+  color:white
 }
 
 .catelory {
-    background-image: url(../assets/bg-dvt2.jpg) ;
-    background-repeat: no-repeat;
-    background-size: 100% 800px;
-    background-position: 100% 100px;
-    height: 800px;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 0 150px;
-    color:white
+  position: relative;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  padding: 0 150px;
 }
 
+
+
 .product {
-    background-color: inherit;
-    text-align: center;
-    background-color: #2D2E36;
-    flex-direction: column;
-    border-radius: 20px;
-    overflow: hidden;
-    height: fit-content;
-    cursor: pointer;
+  background-color: inherit;
+  text-align: center;
+  background-color: #191d24;
+  flex-direction: column;
+  border-radius: 20px;
+  overflow: hidden;
+  height: fit-content;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .product:hover {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .product:hover .name_product span {
-    color: #DA18A3;
+  color: #fad56a;
 }
 
 .name_product {
-    padding: 0 20px;
-    margin: 10px 0;
-    text-align: left;
+  padding: 0 20px;
+  margin: 10px 0;
+  text-align: left;
 }
 
 .name_product span {
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
 
 .info_product span {
-    height: 55px;
-    text-align: left;
-    padding: 0px 20px;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  height: 55px;
+  text-align: left;
+  padding: 0px 20px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product_img {
-    width: 100%;
-    aspect-ratio: 1/1;
-    position: relative;
-    overflow: hidden;
-    /* border-bottom: 1px solid #e5e5e5; */
+  width: 100%;
+  aspect-ratio: 1/1;
+  position: relative;
+  overflow: hidden;
+  /* border-bottom: 1px solid #e5e5e5; */
 }
 
 .product_img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-top: 20px;
-    
-    transition: transform 0.3s ease;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-top: 20px;
+
+  transition: transform 0.3s ease;
 }
 
 .price_tag {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.65);
-    border-top-left-radius: 20px;
-    color: white;
-    padding: 10px 20px;
-    font-size: 25px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.65);
+  border-top-left-radius: 20px;
+  padding: 10px 20px;
+  font-size: 25px;
 }
 
 .product_img img:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .add_button {
-    color: white;
-    margin-top: 10px;
-    padding: 10px 15px;
-    border-radius: 30px;
-    background-color: #DA18A3;
-    border: none;
-    text-transform: uppercase;
-    cursor: pointer;
-    margin-bottom: 16px;
+  margin-top: 10px;
+  padding: 10px 15px;
+  border-radius: 30px;
+  background-color: #fad56a;
+  border: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-bottom: 16px;
 }
 .add_button:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .commit {
-    height: 500px;
+  height: 500px;
 }
