--- a/client-store/Css/header.css
+++ b/client-store/Css/header.css
@@ -103,7 +103,7 @@ header.scrolled .header_nav ul li a {
   color: white;
 }
 
-.search_box button {
+/* .search_box button {
   height: 35px;
   width: 35px;
   background-color: white;
@@ -113,7 +113,7 @@ header.scrolled .header_nav ul li a {
 
 .search_box button:hover {
   background-color: rgb(232, 95, 118);
-}
+} */ 
 
 .search_box {
   display: flex;
@@ -228,8 +228,6 @@ header.scrolled .cart_login .user img {
   grid-gap: 20px;
   padding: 0 150px;
 }
-
-
 
 .product {
   background-color: inherit;
