--- a/client-store/Css/login.css
+++ b/client-store/Css/login.css
@@ -53,7 +53,7 @@ h2 {
     width: 310px;
     border-bottom: 2px solid white;
 }
-
+-------
 .input label {
     position: absolute;
     color: white;
@@ -89,7 +89,7 @@ input:valid~label {
     top: -10px;
 }
 
-.remember {
+/* .remember {
     margin: -15px 0 15px;
     color: white;
     display: flex;
@@ -108,7 +108,7 @@ input:valid~label {
 
 .remember label a:hover {
     text-decoration: underline;
-}
+} */
 
 .register-button {
     width: 100%;
@@ -152,8 +152,6 @@ input:valid~label {
     color: white;
     text-align: center;
     margin-top: 10px;
-
-
 }
 
 .register p a {
